# AgendAI

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
agent/: Dockerfile  langgraph.json  pyproject.toml
agent-ui/: .env.local.example  .gitignore  Dockerfile  package-lock.json  package.json  vitest.config.ts
agent-ui-pro/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json
agent/agent/: __init__.py  api_client.py  cache.py  graph.py  guardrails.py  logging_config.py  middleware.py  pii_output.py  resilience.py  state.py
agent/agent/nodes/: audio.py  email_sender.py  input_detector.py  llm_core.py  tool_result_processor.py  tools.py  transcriber.py  tts.py
agent/tests/: conftest.py  test_api_client.py  test_context_manager.py  test_graph.py  test_guardrails.py  test_nodes.py  test_routing.py  test_state.py  test_tool_result_processor.py
agent/tests/perf/: measure_latency.py  validate_b5_audio.py
api/: Dockerfile  package-lock.json  package.json
api/src/: app.js  logger.js  server.js
api/tests/: agendamentos.test.js  cache.test.js  setup.js  (+7 more)
n8n/: flow-a-entrada.json  flow-b-ai-core.json  flow-c-audio.json  flow-d-email.json
nginx/: Dockerfile  nginx.conf.template  warming.html
postman/: clinica.collection.json
(+160 files in other folders)
