[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agendai-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-openai>=0.3",
    "langsmith>=0.2",
    "langgraph-cli[inmem]>=0.1.55",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
