[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agendai-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph==1.2.0",
    "langchain==1.3.1",
    "langchain-openai==1.2.1",
    "langsmith==0.8.4",
    "langgraph-cli[inmem]>=0.1.55",
    "httpx>=0.27",
    "tenacity>=8.2",
    "groq>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
